css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
* {
  box-sizing: border-box;
}

body {
  height: 100vh;

  display: grid;
  grid-template: 1fr 8fr / 1fr 4fr;
  grid-template-areas:
    "dash-left dash-top"
    "dash-left dash-center";
  font-family: "Questrial", sans-serif;
  font-size: 16px;
}

.dashboard-left {
  grid-area: dash-left;
  background-color: #0ea5e9;

  display: flex;
  flex-direction: column;
  gap: 3rem;
  box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
}

.sidebar-top,
.sidebar-bottom {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding-left: 3rem;

  font-size: 24px;
}

img {
  height: 35px;
  width: auto;
}

header {
  margin: 1rem 0 0 1rem;
}

header img {
  height: 60px;
  width: auto;
  align-self: center;
}

h1 {
  font-size: 36px;
  align-self: center;
}

header,
.home,
.profile,
.messages,
.history,
.tasks,
.communities,
.settings,
.support,
.privacy {
  display: flex;
  gap: 1rem;
  align-items: center;

  color: white;
}

.dashboard-top {
  grid-area: dash-top;
  background-color: #f8fafc;

  display: grid;
  gap: 3rem;
  grid-template: 1fr 1fr / 7fr 3fr;
  grid-template-areas:
    "search search"
    "welcome nav";

  box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
  border-style: i;
}

.search {
  margin: 2rem 0 0 3rem;
  grid-area: search;

  display: grid;
  grid-template-columns: 7fr 3fr;
  align-items: center;
  align-self: center;
}

.search-left {
  display: grid;
  grid-template-columns: 1fr 16fr;
  margin-right: 1rem;
}

.search-bar {
  height: 90%;
  width: 85%;
  border-radius: 10px;
  background-color: darkgrey;
}

.search-right {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  align-items: center;

  font-size: 24px;
  font-weight: bold;
  margin-right: 4rem;
}

.name a {
  color: black;
}

.welcome-section {
  grid-area: welcome;

  display: grid;
  gap: 2rem;
  grid-template: 1fr 1fr / 1fr 3fr 3fr;
  grid-template-areas:
    "image greeting ."
    "image greeting .";

  justify-items: start;
  align-items: start;
  margin-bottom: 1rem;
}

.user-image-big {
  grid-area: image;
  align-self: center;

  padding-bottom: 1rem;

  margin-left: 3rem;
  height: 5rem;
  width: 4rem;
}

.user-image-big img {
  height: 100%;
}

.welcome-message {
  grid-area: greeting;
  font-weight: bold;
  height: 5rem;

  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
}

span {
  font-size: 16px;
}

.welcome-message span:last-child {
  font-size: 28px;
}

.nav {
  grid-area: nav;
}

nav ul {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 3rem;
  margin-right: 4rem;
}

.btn {
  width: 7rem;
  height: 2.5rem;
  border-radius: 16px;

  color: white;
  font-weight: bold;
  font-size: 20px;
  background-color: #0ea5e9;

  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

a {
  text-decoration: none;
  color: white;
}

a:hover {
  text-decoration: underline;
  cursor: pointer;
}

.dashboard-center {
  grid-area: dash-center;
  background-color: #d6d3d1;
  box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.2);

  min-width: none;
  padding: 1rem;
  gap: 1rem;

  display: grid;
  grid-template: 1fr 9fr 9fr / 4fr 4fr 3fr;
  grid-template-areas:
    "articles-heading . announcements-heading"
    "articles-container articles-container announcements-container"
    "articles-container articles-container trending-container";
}

.articles-heading {
  grid-area: articles-heading;

  margin-top: 1rem;
  font-size: 28px;
  font-weight: bold;
}

.announcements-heading {
  grid-area: announcements-heading;

  margin-top: 1rem;

  font-size: 28px;
  font-weight: bold;
}

.articles-container {
  grid-area: articles-container;

  display: grid;
  grid-template: repeat(3, 1fr) / repeat(2, 1fr);
  gap: 2rem;
}

article {
  width: calc(50% - calc((4 / 3) rem));
  height: calc(33% - calc((4 / 3) rem));

  background-color: #f5f5f4;
  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
  border-left: 1rem solid orange;
  border-radius: 8px;
  padding: 1rem;

  display: flex;
  flex-direction: column;
  gap: 1rem;

  transition: 0.3s ease;
}

article:hover {
  scale: 1.02;
}

article h3 {
  font-size: 24px;
  font-weight: bold;
}

article .icons {
  display: flex;
  gap: 1rem;
  align-self: end;

  margin-top: auto;
}

.icons div:hover {
  cursor: pointer;
}

.announcements-container {
  grid-area: announcements-container;

  height: 100%;
  width: 100%;
  background-color: #f5f5f4;
  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
  border-radius: 8px;
  padding: 1rem;

  display: grid;
  gap: 1rem;
  grid-template-rows: repeat(3, 1fr);
}

.an-top,
.an-mid {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}

.an-top,
.an-mid,
.an-end {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;
}

.announcements-container h3 {
  font-size: 20px;
  font-weight: bold;
}

.announcements-container p a {
  color: black;
}

.trending-container {
  grid-area: trending-container;

  display: grid;
  grid-template: 1fr 9fr / 1fr;
}

.trending-container h2 {
  font-size: 28px;
  font-weight: bold;
  margin: 8px 0;
}

.trending-people-container {
  height: 100%;
  width: 100%;
  background-color: #f5f5f4;
  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
  border-radius: 8px;
  padding: 1rem;

  display: grid;
  gap: 1rem;
  grid-template-rows: repeat(4, 1fr);
}

.trending-person {
  display: flex;
  gap: 1rem;
}

.trending-person img {
  align-self: center;

  height: 4rem;
  width: 4rem;
}

.trending-person-description {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
}

h4 {
  font-size: 20px;
}

